
[TestPatchWorkspaceInstanceAsDesired/✅_OK - 1]
{
 "metadata": {
  "creationTimestamp": null,
  "name": "inst1",
  "namespace": "cosmo-user-default"
 },
 "spec": {
  "override": {
   "patchesJson6902": [
    {
     "patch": "[{\"op\": \"replace\",\"path\": \"/spec/ports\",\"value\": [{\"name\":\"port8080\",\"protocol\":\"TCP\",\"port\":8080,\"targetPort\":18080},{\"name\":\"port9999\",\"protocol\":\"TCP\",\"port\":9999,\"targetPort\":19999}]}]",
     "target": {
      "apiVersion": "v1",
      "kind": "Service",
      "name": "ws-svc"
     }
    },
    {
     "patch": "[{\"op\": \"replace\",\"path\": \"/spec/replicas\",\"value\": 1}]",
     "target": {
      "apiVersion": "apps/v1",
      "kind": "Deployment",
      "name": "ws-deploy"
     }
    }
   ]
  },
  "template": {
   "name": "tmpl1"
  },
  "vars": {
   "VAR1": "VAL1",
   "{{USER}}": "default",
   "{{WORKSPACE_DEPLOYMENT_NAME}}": "ws-deploy",
   "{{WORKSPACE_SERVICE_NAME}}": "ws-svc",
   "{{WORKSPACE}}": "ws1"
  }
 },
 "status": {}
}
---

[TestPatchWorkspaceInstanceAsDesired/✅_OK_with_scheme - 1]
{
 "metadata": {
  "creationTimestamp": null,
  "name": "inst1",
  "namespace": "cosmo-user-default",
  "ownerReferences": [
   {
    "apiVersion": "cosmo-workspace.github.io/v1alpha1",
    "blockOwnerDeletion": true,
    "controller": true,
    "kind": "Workspace",
    "name": "ws1",
    "uid": ""
   }
  ]
 },
 "spec": {
  "override": {
   "patchesJson6902": [
    {
     "patch": "[{\"op\": \"replace\",\"path\": \"/spec/ports\",\"value\": []}]",
     "target": {
      "apiVersion": "v1",
      "kind": "Service",
      "name": "ws-svc"
     }
    },
    {
     "patch": "[{\"op\": \"replace\",\"path\": \"/spec/replicas\",\"value\": 0}]",
     "target": {
      "apiVersion": "apps/v1",
      "kind": "Deployment",
      "name": "ws-deploy"
     }
    }
   ]
  },
  "template": {
   "name": "tmpl1"
  },
  "vars": {
   "{{USER}}": "default",
   "{{WORKSPACE_DEPLOYMENT_NAME}}": "ws-deploy",
   "{{WORKSPACE_SERVICE_NAME}}": "ws-svc",
   "{{WORKSPACE}}": "ws1"
  }
 },
 "status": {}
}
---

[TestPatchWorkspaceInstanceAsDesired/❌_Err_witr_invalid_scheme - 1]
failed to set owner reference: no kind is registered for the type v1alpha1.Workspace in scheme "pkg/runtime/scheme.go:100"
---

[TestSvcPorts/✅_OK1 - 1]
[
 {
  "name": "port1111",
  "port": 1111,
  "protocol": "TCP",
  "targetPort": 2222
 }
]
---

[TestSvcPorts/✅_OK2 - 1]
[
 {
  "name": "port1111",
  "port": 1111,
  "protocol": "TCP",
  "targetPort": 2222
 },
 {
  "name": "port3333",
  "port": 3333,
  "protocol": "TCP",
  "targetPort": 4444
 }
]
---

[TestSvcPorts/✅_OK3 - 1]
[
 {
  "name": "port1111",
  "port": 1111,
  "protocol": "TCP",
  "targetPort": 2222
 },
 {
  "name": "port3333",
  "port": 3333,
  "protocol": "TCP",
  "targetPort": 2222
 }
]
---

[TestSvcPorts/✅_OK3#01 - 1]
[
 {
  "name": "port1111",
  "port": 1111,
  "protocol": "TCP",
  "targetPort": 2222
 },
 {
  "name": "port3333",
  "port": 3333,
  "protocol": "TCP",
  "targetPort": 2222
 }
]
---
